# mulle-xcode-to-cmake

./: .gitignore  .travis.yml  BUILD-GNUSTEP-WINDOWS.md  CMakeLists.txt  README.md  RELEASENOTES.md  generate-brew-formula.sh  mulle-xcode-settings.1
.github/workflows/: mulle-sde-ci.yml
.mulle/: README.md
.mulle/etc/craft/definition.mingw/set/: CC
.mulle/etc/craft/definition/set/: CC
.mulle/etc/env/: auxscope  environment-project.sh
.mulle/etc/project/: formula-info.sh  formula-info.sh.sample  generate-formula.sh  post-release.sh.sample  publisher-info.sh  publisher-info.sh.sample  version-info.sh
.mulle/etc/sourcetree/: config
.mulle/share/env/: auxscope  environment-extension.sh  environment-plugin-os-darwin.sh  environment-plugin.sh  environment.sh  include-environment.sh  style  tool-extension  tool-extension.darwin  tool-extension.freebsd  tool-extension.linux  tool-plugin
.mulle/share/env/libexec/: mulle-env-bash-completion.sh
.mulle/share/sde/: extension
.mulle/share/sourcetree/: config
mulle-xcode-settings.xcodeproj/: project.pbxproj
mulle-xcode-to-cmake.xcodeproj/: project.pbxproj
src/PBXReading/: MullePBXUnarchiver.h  MullePBXUnarchiver.m  NSObject+DecodeWithObjectStorage.h  NSObject+DecodeWithObjectStorage.m  NSString+KeyFromSetterSelector.h  NSString+KeyFromSetterSelector.m  NSString+LeadingDotExpansion.h  NSString+LeadingDotExpansion.m  PBXObject.h  PBXObject.m  PBXProjectProxy.h  PBXProjectProxy.m
src/PBXSupport/: PBXPathObject+HierarchyAndPaths.h  PBXPathObject+HierarchyAndPaths.m  PBXProject+Settings.h  PBXProject+Settings.m  PBXProject+VirtualProjectRoot.h  PBXProject+VirtualProjectRoot.m  PBXTarget+HierarchyAndPaths.h  PBXTarget+HierarchyAndPaths.m
src/PBXWriting/: MullePBXArchiver.h  MullePBXArchiver.m  MulleSortedKeyDictionary.h  MulleSortedKeyDictionary.m  PBXObject+PBXEncoding.h  PBXObject+PBXEncoding.m
src/mulle-xcode-settings/: NSArray+Path.h  NSArray+Path.m  NSString+ExternalName.h  NSString+ExternalName.m  PBXHeadersBuildPhase+Export.h  PBXHeadersBuildPhase+Export.m  PBXPathObject+HierarchyAndPaths.h  PBXPathObject+HierarchyAndPaths.m  main.m
src/mulle-xcode-to-cmake/: NSString+ExternalName.h  NSString+ExternalName.m  PBXPathObject+HierarchyAndPaths.m  main.m  main.sublime-project
tests/empty/empty.xcodeproj/: project.pbxproj
